Feature/osdop 184/5/appendix c supporting documents (#314)
* Added new table and migration script to move existing case event files into the new table

* Removed migration script and added uploaded_timestamp column

* Added first usage of new file upload table for concept

* Fixed failing tests

* Added more tests

* Removed deletion from uploaded_files table as this will be handled by a scheduler later

* Addressed PR comments (excluding renaming)

* Removed useless Transactional annotation

* Added invalid delete call test

* Fixed code smell

* Addressed PR comments

* Reworked comparison to be easier to follow

* Removed toString to resolve code smell

* Case events now update file links and can be downloaded from the `Case events` tab

* Fixed bug in CaseEventFileService and fixed broken tests

* Added more tests

* Fixed rebase issue

* WIP: Addressed PR comments - Need to fix tests

* Fixed broken comparison after another rebase

* Addressed PR comments

* Changed comparator to ignore case and added missing test

* Added test to ensure sort is not case-sensitive

* WIP: File uploads migrated to new format, need to fix tests

* Fixed tests

* Rebased and fixed issues

* Added case-insensitive sort and test

* Case events now update file links and can be downloaded from the `Case events` tab

* Rebased and fixed issues

* Case events now update file links and can be downloaded from the `Case events` tab

* Added Appendix C file upload on the nominee details screen

* Includes form repopulating after validation failure and re-entry after valid submission

* Fixed remaining tests and added more for additional coverage

* Added more tests

* Added guidance todo

* Moved file field to validate in correct order

* File uploads are shown in nomination summary

* Fixed a bug causing the nominee details section to appear as not complete

* Fixed issues after rebase

* Addressed non-refactor com